syntax = "proto3";

package hiveOperations.logging;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message LogField {
    string name = 1;
    oneof field {
        string str_field = 2;
        double float_field = 3;
        int64 int_field = 4;
        uint64 uint_field = 5;
        bool bool_field = 6;
        bytes binary_field = 7;
        bytes byte_string_field = 8;
        google.protobuf.Timestamp time_field = 9;
        google.protobuf.Duration duration_field = 10;
    }
}